# tkc-dbtools-py

./: .gitignore  .pre-commit-config.yaml  LICENSE  Lvlab.yml  README.md  pyproject.toml  requirements.txt
.github/: release.yml
.github/workflows/: pre-commit.yml  pylint.yml
examples/: compare-mysql-grants.yml  dev-api-grants-chaos.sql  dev-api-grants-cleanup-chaos-for-cross-env-example.sql  dev-api-grants-revoke-for-cross-env-example.sql  dev-api-grants-revoke.sql  dev-api-workload-grants.sql  dev-syskvp-workload-grants.sql  dev-user-workload-grants.sql  prod-api-workload-grants.sql  prod-syskvp-workload-grants.sql  prod-user-workload-grants.sql
examples/tkc-compare-mysql-grants/: README.md  SYSPREP.md  compare-mysql-grants.yml  deploy_example_in_docker.sh  deploy_example_in_podman.sh  dev-api-grants-chaos-for-cross-env-example.sql  dev-api-grants-chaos-for-intra-env-example.sql  dev-api-grants-cleanup-chaos-for-intra-env-example.sql  dev-api-grants-revoke-for-intra-env-example.sql  dev-syskvp-workload-grants.sql  dev-user-workload-grants.sql  prod-api-add-extra-grants-example.sql  prod-api-remove-extra-grants-example.sql  prod-api-workload-grants.sql  prod-syskvp-workload-grants.sql  prod-user-workload-grants.sql  schema.sql  stage-api-workload-grants.sql  stage-syskvp-workload-grants.sql  stage-user-workload-grants.sql
tkc_dbtools/mysql/: compare_grants.py
